Check this one, actually!
Just made minor height/width changes and various little tweaks

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <h3 id="headerJob">UX Designer</h3>
     </section>
     <div>
-        <img class="headerImg" src="images/Untitled.jpg" alt="Yellow Flowers" class="headerImage"> <!-- Your flowers image wasn't being pointed to correctly either. it used to look like this: "../images/Untitled.jpg"-->
+        <img class="headerImg" src="images/headerImg.png" alt="Yellow Flowers" class="headerImage"> <!-- Your flowers image wasn't being pointed to correctly either. it used to look like this: "../images/Untitled.jpg"-->
     </div>
 </header>
 <section class="aboutAndSkills"> 
+    <h2 class="headerTwo">About Me</h2>
     <div class="aboutMe">
-        <h2 class="headerTwo">About Me</h2>
         <div class="aboutMeBox">
             <p class="description">
                 Designing unique solutions for the 
@@ -78,8 +78,8 @@
     <h2 class="headerTwo">Lets Connect!</h2>
     <button class="button">Downloadable Resume</button>
     <button class="button">carolynredford4@gmail.com</button>
-    <button class="button">LinkedIn</button>
-    <button class="button">Github</button>
+    <button class="button"> <img id="socialButtons" src="Images/Github.png" atl="Github"> </button>
+    <button class="button"> <img id="socialButtons" src="Images/linkedIn.png" alt="LinkedIn"> </button>
     <div id="portrait"> <img class="portrait" src="images/RedfordFamily-RMNP-3.JPEG" alt="portrait"> 
     </div>
 </section>
