--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 travel accommodations market
                 was found and a lo-fi prototype was 
                 created. </p>
+            <p><i class="arrow right"></i></p>
         </div>
         <div class="projectBox2">
             <h3 class="headerThree">Non-profit Redesign</h3>
@@ -62,6 +63,7 @@
                 Advocates, our team re-designed 
                 the website to simplify the header and
                 modernize the website.</p>
+            <p><i class="arrow right"></i></p>
         </div>
     </section>
 </div>
@@ -71,8 +73,10 @@
 <section class="connect">
     <button class="button">Downloadable Resume</button>
     <button class="button">carolynredford4@gmail.com</button>
-    <button class="button"> <img id="socialButtons" src="Images/Github.png" atl="Github"> </button>
-    <button class="button"> <img id="socialButtons" src="Images/linkedIn.png" alt="LinkedIn"> </button>
+    <span class="socialButtons">
+        <button class="button"> <img id="socialButtons" src="Images/Github.png" atl="Github"> </button>
+        <button class="button"> <img id="socialButtons" src="Images/linkedIn.png" alt="LinkedIn"> </button>
+</span>
 </section>
 
 <!-- Footer -->
@@ -81,8 +85,10 @@
     <section class="connect">
         <button class="button">Downloadable Resume</button>
         <button class="button">carolynredford4@gmail.com</button>
-        <button class="button"> <img class="socialButtons" src="Images/Github.png" atl="Github"> </button>
-        <button class="button"> <img class="socialButtons" src="Images/linkedIn.png" alt="LinkedIn"> </button>
+        <span class="socialButtons">
+            <button class="button"> <img id="socialButtonGit" src="Images/Github.png" atl="Github"> </button>
+            <button class="button"> <img id="socialButtonLinked" src="Images/linkedIn.png" alt="LinkedIn"> </button>
+        </span>
     </section>
     <div class="footerNav">
         <p class="homeItemFoot">Home</p>
