--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Carolyn Redford Portfolio</title>
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="css/style.css">  
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Khula&display=swap" rel="stylesheet">
@@ -69,6 +69,7 @@
 </div>
 
 <!-- Lets Connect -->
+<div class="connectSection">
 <h2 class="headerTwo">Lets Connect!</h2>
 <section class="connect">
     <button class="button">Downloadable Resume</button>
@@ -78,6 +79,7 @@
         <button class="button"> <img id="socialButtons" src="Images/linkedIn.png" alt="LinkedIn"> </button>
 </span>
 </section>
+</div>
 
 <!-- Footer -->
 <footer>
@@ -107,7 +109,13 @@
 <html>
     <head>
         <title>Carolyn Redford Portfolio</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../UX_UI_HW_17/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Klee+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -147,8 +155,7 @@
         </section>
         <h2 class="headerTwo">Case Studies</h2>
         <section class="projectBox">
-            
-            <div class="projectBox1">
+            <div class="projectBox">
                 <h3 class="headerThree">Travel App Creation</h3>
                 <p class="description">Through user interviews and 
                     competitor analysis, a gap in the
@@ -156,7 +163,7 @@
                     was found and a lo-fi prototype was 
                     created. </p>
             </div>
-            <div class="projectBox2">
+            <div class="projectBox">
                 <h3 class="headerThree">Non-profit Redesign</h3>
                 <p class="description">Working closely with a 
                     stakeholder of Clear Creek County 
@@ -164,7 +171,7 @@
                     the website to simplify the header and
                     modernize the website.</p>
             </div>
-            <div class="projectBox3">
+            <div class="projectBox">
                 <h3 class="headerThree">Government Website Redesign</h3>
                 <p class="description">Coming soon!</p>
             </div>
