--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Khula&display=swap" rel="stylesheet">
+    <img src="/Images/background.png" class="bg">
+    <div id="page-wrap">
+    </div>
 </head>
 <body>
     <!--Homepage header section-->
